addin some docs back

--- a/docs/brains/v1.1.4c1 brains.md
+++ b/docs/brains/v1.1.4c1 brains.md
@@ -1,2 +1,3 @@
+# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
 # Brains — v1.1.4c1 Badge Fix
 The earlier badge injection collided against existing code in some layouts, producing a `passtry:` token. This patch deletes the bad block and reinserts a clean badge after the import section. No behavioral changes beyond rendering the badge safely.
