--- a/docs/brains/v1.1.4c6 brains.md
+++ b/docs/brains/v1.1.4c6 brains.md
@@ -1,3 +1,4 @@
+# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
 # Brains — v1.1.4c6 rationale
 Some versions of our UI module only render when executed as the *main* Streamlit script
 (e.g., code under `if __name__ == "__main__": main()`). Importing the module doesn't
