--- a/docs/brains/v1.1.4c7 brains.md
+++ b/docs/brains/v1.1.4c7 brains.md
@@ -1,2 +1,6 @@
+# \# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
+
 # Brains — v1.1.4c7
-Because different historical branches used different entry styles, we probe for common entrypoints and also execute the module as __main__. This avoids "imported but not rendered" scenarios and tells us exactly which path worked via logs.
+
+Because different historical branches used different entry styles, we probe for common entrypoints and also execute the module as **main**. This avoids "imported but not rendered" scenarios and tells us exactly which path worked via logs.
+
