--- a/docs/brains/v1.1.4c9d brains.md
+++ b/docs/brains/v1.1.4c9d brains.md
@@ -1,3 +1,4 @@
+# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
 # v1.1.4c9d — Brains
 Principle: the app must export a stable UI entrypoint.
 
