--- a/docs/brains/v1.1.4c brains.md
+++ b/docs/brains/v1.1.4c brains.md
@@ -1,4 +1,8 @@
+# \# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
+
 # Brains — v1.1.4c bundle
+
 Two pragmatic layers:
-- visual version badge restored safely after imports
-- UI debug wrapper so blank screens become actionable logs
+
+* visual version badge restored safely after imports
+* UI debug wrapper so blank screens become actionable logs
