--- a/docs/brains/v1.1.4c4 brains.md
+++ b/docs/brains/v1.1.4c4 brains.md
@@ -1,3 +1,4 @@
+# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
 # Brains — v1.1.4c4 Entry Repair
 We replaced the entry module with a minimal, clean loader that:
 - reloads `app.app_merged` each run,
