--- a/docs/brains/v1.1.4c5 brains.md
+++ b/docs/brains/v1.1.4c5 brains.md
@@ -1,8 +1,13 @@
+# \# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
+
 # Brains — v1.1.4c5 StrongGuard
+
 Blank screen with no logs means failure before our prior handlers ran or a SystemExit was thrown.
 This guard:
-- Writes a boot marker.
-- Catches BaseException around both import and main dispatch.
-- Hooks sys.exit and sys.excepthook to force logs.
+
+* Writes a boot marker.
+* Catches BaseException around both import and main dispatch.
+* Hooks sys.exit and sys.excepthook to force logs.
 
 We can now prove where the failure happens and fix the root cause with a tiny code patch.
+
