--- a/docs/brains/v1.1.4c8 brains.md
+++ b/docs/brains/v1.1.4c8 brains.md
@@ -1,3 +1,4 @@
+# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
 # v1.1.4c8 brains — EntryHunter, import hygiene, and UI stability
 
 Date (UTC): 2025-09-20T01:53:18Z
