--- a/docs/brains/v1.1.4c9 brains.md
+++ b/docs/brains/v1.1.4c9 brains.md
@@ -1,3 +1,4 @@
+# MAKE NEW BRAINS EACH TIME YOU MAKE A CHANGE. DO NOT OVER WRITE PREVIOUS BRAINS
 # Brains — v1.1.4c9 (SmartEntry)
 
 Date (UTC): 2025-09-20T02:14:23.019984Z
