Handle Angstrom aliases during FITS ingestion

--- a/docs/ai_log/2025-09-30.md
+++ b/docs/ai_log/2025-09-30.md
@@ -14,3 +14,22 @@
 ## Outstanding Follow-ups
 - Rebuild the documentation mirror tooling referenced in historical instructions so `docs/sources.yaml` and related indices can be regenerated once restored.
 - Execute `Verify-Project.ps1` in a Windows environment and confirm ingestion roadmap tasks (SIMBAD resolver, archive consolidation, provenance enrichment) progress in subsequent patches.
+
+---
+
+## Tasking — v1.2.0a
+- Normalise FITS ingestion so plural/aliased Angstrom labels succeed.
+- Extend regression coverage and roll continuity collateral for the hotfix.
+
+## Actions & Decisions
+- Added alias-aware handling in `app/server/ingest_fits.py` and `app/server/units.py` so `canonical_unit` accepts plural Angstrom spellings.
+- Backfilled regression coverage for the "Angstroms" scenario and updated patch notes, brains, AI handoff, and patch log for v1.2.0a.
+- Attempted to start the documentation search server, but it still requires the unavailable `faiss` dependency. 【db955f†L1-L5】
+
+## Verification
+- `pytest tests/server/test_ingest_fits.py -k Angstroms`. 【3d3cce†L1-L16】
+- Manual `parse_fits` run against an "Angstroms" FITS table confirming canonical labelling and nm conversion. 【6e7934†L1-L5】
+
+## Outstanding Follow-ups
+- Restore the FAISS-backed documentation search stack or replace it so docs-first queries succeed.
+- Continue the v1.2 roadmap items (SIMBAD resolver, ingestion consolidation, provenance enrichment, caching) once the tooling gap is resolved.
