Add FITS time-series ingestion and update UI axis handling

--- a/docs/ai_log/2025-09-30.md
+++ b/docs/ai_log/2025-09-30.md
@@ -33,3 +33,22 @@
 ## Outstanding Follow-ups
 - Restore the FAISS-backed documentation search stack or replace it so docs-first queries succeed.
 - Continue the v1.2 roadmap items (SIMBAD resolver, ingestion consolidation, provenance enrichment, caching) once the tooling gap is resolved.
+
+## Tasking — v1.2.0b
+- Allow FITS time-series tables into the ingestion pipeline without tripping spectral-only guards.
+- Update the Streamlit overlay UI so time axes display their native units/ranges.
+- Refresh continuity collateral (version, brains, patch notes, AI handoff, AI log) for the v1.2.0b handoff.
+
+## Actions & Decisions
+- Extended `app/server/ingest_fits.py` to classify TIME columns via label/unit heuristics, emit `axis_kind="time"`, and include `time_range`/`time_unit` metadata plus provenance (`time_converted_to`, `time_original_unit`).
+- Propagated the new axis metadata through `_ingest_table_hdu`, `parse_fits`, and the overlay UI so plots label `Time (...)`, metadata tables use an "Axis range" column, and regression helpers understand `axis_kind`.
+- Added time-series regression coverage and refreshed docs (`docs/brains/brains_v1.2.0b.md`, `docs/patch_notes/v1.2.0b.md`, `docs/ai_handoff/AI_HANDOFF_PROMPT_v1.2.0b.md`, `PATCHLOG.txt`, `app/version.json`).
+
+## Verification
+- `pytest tests/server/test_ingest_fits.py::test_parse_fits_accepts_time_series_units` 【a5cbed†L1-L9】
+- `pytest tests/ui/test_metadata_summary.py` 【04e646†L1-L14】
+
+## Outstanding Follow-ups
+- Mirror the time-axis detection in ASCII ingestion so CSV light curves get the same metadata treatment.
+- Evaluate support for image HDUs with temporal WCS metadata and decide whether to reuse the time-series pathway.
+- Continue the v1.2 roadmap (SIMBAD resolver, ingestion consolidation, provenance enrichment, caching) once the time-series flow stabilises.
