Fix example browser provider filter persistence

--- a/docs/ai_log/2025-09-30.md
+++ b/docs/ai_log/2025-09-30.md
@@ -60,3 +60,24 @@
 ### Citations
 - docs/mirrored/astropy/coordinates.meta.json
 
+---
+
+## Tasking — v1.2.0c
+- Stop the example browser from overwriting provider filters on rerun.
+- Eliminate the Streamlit widget warning triggered by reassigning `example_browser_provider_filter` defaults.
+- Refresh documentation (UI review, patch notes, AI log) and record manual verification.
+
+## Actions & Decisions
+- Reordered session-state initialisation in `app/ui/example_browser.py` so provider selections are seeded before rendering the multiselect and sanitised only when provider options change. 【F:app/ui/example_browser.py†L119-L139】
+- Dropped the `default=` argument once session state exists, letting Streamlit reuse persisted selections and preventing the duplicate-key warning. 【F:app/ui/example_browser.py†L141-L144】
+- Updated `docs/library_usage_review.md` with a note about the persistent provider filters and rolled fresh patch notes plus patch log continuity for v1.2.0c. 【F:docs/library_usage_review.md†L31-L33】【F:docs/patch_notes/v1.2.0c.md†L1-L25】【F:PATCHLOG.txt†L17-L18】
+- Attempted to query the local docs search service, but it remains unavailable in this snapshot; noted for future restoration.
+
+## Verification
+- Manual QA: `PYTHONPATH=/workspace/spectra-app streamlit run app/ui/main.py --server.headless true --server.port 8501 --server.address 0.0.0.0 --browser.gatherUsageStats false` (provider filters persist, no widget warning). 【67e5e1†L1-L2】【8c1277†L1-L5】
+- Playwright session confirming only ESO/MAST remain selected after filtering. 【grdnbrgb†L1-L1】
+
+## Outstanding Follow-ups
+- Restore the docs search server tooling so protocol-mandated queries can succeed instead of being noted as unavailable.
+- Consider porting the provider-filter persistence fix into automated UI tests to guard against regressions.
+
