Fix example browser provider defaults and update continuity docs

--- a/docs/ai_log/2025-10-02.md
+++ b/docs/ai_log/2025-10-02.md
@@ -25,6 +25,29 @@
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint (internal).
 - https://docs.astropy.org/en/latest/io/votable/
 
+## Tasking — v1.2.0f
+- Resolve the Streamlit rerun warning emitted by the example browser provider selector.
+- Preserve cached provider filters and update regression coverage accordingly.
+- Roll continuity artefacts (version, brains, patch notes, AI log, patch log) for the v1.2.0f hotfix.
+
+## Actions & Decisions
+- Reviewed the v1.2+ handoff protocol to reconfirm the continuity checklist before touching the example browser UI. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L120】
+- Consulted the MAST API reference to confirm provider naming conventions while validating fallback behaviour. 【F:docs/mirrored/mast_api.meta.json†L1-L7】
+- Added `_normalise_provider_defaults` and refactored `render_example_browser_sheet` to seed widget defaults without mutating Streamlit-managed keys post-render. 【F:app/ui/example_browser.py†L91-L189】
+- Extended `tests/ui/test_example_browser.py` with helper-focused unit tests covering stale provider removal and default fallbacks. 【F:tests/ui/test_example_browser.py†L31-L67】
+- Bumped `app/version.json` to v1.2.0f and refreshed patch notes (md/txt), brains index/log, and patch log per the v1.2 continuity contract. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.0f.md†L1-L19】【F:docs/PATCH_NOTES/v1.2.0f.txt†L1-L3】【F:docs/brains/brains_v1.2.0f.md†L1-L18】【F:docs/brains/brains_INDEX.md†L1-L24】【F:PATCHLOG.txt†L1-L21】
+
+## Verification
+- `pytest tests/ui/test_example_browser.py` 【eb5f05†L1-L5】
+
+## Outstanding Follow-ups
+- Expand UI snapshot coverage once Streamlit tooling allows us to assert widget warning-free reruns end-to-end.
+- Audit the duplicated v1.2.0d rows in the brains index during the next documentation cleanup.
+
+## Docs Consulted
+- Spectra App v1.2+ – Handoff Protocol & Task Blueprint (internal).
+- https://mast.stsci.edu/api/v0//
+
 ## Tasking — v1.2.0e
 - Keep the Spectra App header caption aligned with the live patch metadata.
 - Add regression coverage so the header continues to prioritise the patch version.
