Move line catalogs into sidebar and update docs

--- a/docs/ai_log/2025-10-01.md
+++ b/docs/ai_log/2025-10-01.md
@@ -17,3 +17,20 @@
 
 ## Outstanding Follow-ups
 - Extend `_product_overlay_support` once 2-D reduction pipelines can provide 1-D slices so library overlays can surface those assets without manual downloads.
+
+## Tasking
+- Relocate the NIST line catalog controls from the Library tab into the sidebar session controls per the hotfix request.
+- Add regression coverage to ensure the sidebar renders the NIST form online and shows the offline notice when archive fetchers are disabled.
+- Refresh the v1.2 continuity artefacts (version, brains, patch notes, UI contract, patch log) after the sidebar change.
+
+## Actions & Decisions
+- Reviewed the astroquery NIST query reference to confirm our form parameters still align before moving the UI. 【F:docs/mirrored/astroquery/nist/nist.meta.json†L1-L4】
+- Updated `_render_settings_group` to render `_render_line_catalog_group` in the sidebar and removed the Library tab container/caption for the line catalog tools. 【F:app/ui/main.py†L1081-L1103】【F:app/ui/main.py†L2525-L2536】
+- Added Streamlit AppTest coverage that asserts the NIST form appears in the sidebar when online and that the offline notice replaces it when fetchers are disabled. 【F:tests/ui/test_sidebar_line_catalog.py†L1-L35】
+- Bumped versioning and refreshed the patch notes, brains log/index, UI contract JSON, plaintext notes, and patch log for v1.2.0g. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.0g.md†L1-L19】【F:docs/PATCH_NOTES/v1.2.0g.txt†L1-L3】【F:docs/brains/brains_v1.2.0g.md†L1-L18】【F:docs/brains/brains_INDEX.md†L1-L22】【F:docs/ui_contract.json†L1-L20】【F:PATCHLOG.txt†L17-L19】
+
+## Verification
+- `pytest tests/ui/test_sidebar_line_catalog.py` 【894051†L1-L3】
+
+## Outstanding Follow-ups
+- Wire the UI contract JSON into the verification script so automated checks enforce the documented sidebar sections.
