Relocate overlay clear control

--- a/docs/ai_log/2025-10-08.md
+++ b/docs/ai_log/2025-10-08.md
@@ -20,3 +20,17 @@
 
 ## Docs Consulted
 - Astropy time-series overview for axis handling expectations. 【F:docs/mirrored/astropy/timeseries.meta.json†L1-L7】
+
+## Tasking — v1.2.0m
+- Relocate the overlay clearing affordance into the Display & viewport controls and confirm the action inside the overlay workspace.
+
+## Actions & Decisions
+- Moved the "Clear overlays" button into the sidebar display section, disabled it when no overlays are loaded, and set a session flag so the action still calls `_clear_overlays()`. 【F:app/ui/main.py†L1034-L1045】
+- Added an overlay-tab warning banner that consumes the session flag to acknowledge the removal in context while leaving the differential reference chooser untouched. 【F:app/ui/main.py†L2399-L2408】【F:app/ui/main.py†L2375-L2396】
+- Extended UI tests to assert the control’s relocation and absence from the differential tab. 【F:tests/ui/test_differential_form.py†L66-L80】【F:tests/ui/test_sidebar_display_controls.py†L1-L35】
+
+## Verification
+- `pytest tests/ui/test_differential_form.py tests/ui/test_sidebar_display_controls.py` 【97f227†L1-L6】
+
+## Docs Consulted (v1.2.0m)
+- JWST portal overlay UX reference for contextual confirmation guidance. 【F:docs/mirrored/jwst_docs/accessing-jwst-data.meta.json†L1-L5】
