Add image overlay ingestion and viewer support

--- a/docs/ai_log/2025-10-08.md
+++ b/docs/ai_log/2025-10-08.md
@@ -34,3 +34,19 @@
 
 ## Docs Consulted (v1.2.0m)
 - JWST portal overlay UX reference for contextual confirmation guidance. 【F:docs/mirrored/jwst_docs/accessing-jwst-data.meta.json†L1-L5】
+
+## Tasking — v1.2.0n
+- Accept 2-D FITS images as overlays, preserve spatial WCS metadata, surface a viewer with contrast control, and roll continuity updates.
+
+## Actions & Decisions
+- Extended `_ingest_image_hdu` with WCS-based axis detection, serialised image payloads/masks, and `axis_kind="image"` metadata while keeping spectral collapse for genuine wavelength axes. 【F:app/server/ingest_fits.py†L1120-L1350】
+- Updated `ingest_local_file` summaries and safeguards so spatial images bypass spectral sample checks yet propagate pixel counts and `image` payloads. 【F:app/utils/local_ingest.py†L433-L517】
+- Added image-aware overlay handling—new heatmap panels with intensity sliders, metadata formatting, and mixed-axis filtering across the UI. 【F:app/ui/main.py†L60-L206】【F:app/ui/main.py†L1910-L2079】
+- Augmented regression coverage for spatial ingestion, local upload, and UI rendering; refreshed contract, version, brains, and patch notes accordingly. 【F:tests/server/test_ingest_fits.py†L214-L260】【F:docs/patch_notes/v1.2.0n.md†L1-L25】
+
+## Verification
+- `pytest tests/server/test_ingest_fits.py tests/server/test_local_ingest.py` 【f66e47†L1-L33】
+- `pytest tests/ui/test_metadata_summary.py tests/ui/test_overlay_mixed_axes.py tests/ui/test_overlay_additional_traces.py` 【bd7771†L1-L18】
+
+## Docs Consulted (v1.2.0n)
+- Astropy WCS overview for axis typing guidance. 【F:docs/mirrored/astropy/wcs.meta.json†L1-L6】
