feat: async overlay ingest queue

--- a/docs/ai_log/2025-10-11.md
+++ b/docs/ai_log/2025-10-11.md
@@ -14,3 +14,19 @@
 
 ## Docs Consulted
 - None (RAG query returned no relevant hits for "example browser" or provider persistence).
+
+## Tasking — v1.2.0q
+- Decouple overlay ingestion from the render loop so queued downloads run in the background while exposing live status in the sidebar.
+- Prove the async worker keeps the queue responsive across reruns even when downloads stall.
+
+## Actions & Decisions
+- Replaced the synchronous queue walker with a session-scoped executor, progress callbacks, and job snapshots so reruns simply schedule work and reconcile finished futures. 【F:app/ui/main.py†L526-L792】
+- Added an “Overlay downloads” sidebar section that renders status captions and success/error callouts for each job using the new snapshot helper. 【F:app/ui/main.py†L795-L839】【F:app/ui/main.py†L3426-L3451】
+- Captured a slow-download regression AppTest to assert the queue stays interactive and surfaces completion banners once the worker finishes. 【F:tests/ui/test_overlay_ingest_queue_async.py†L12-L112】
+- Logged the architecture shift in patch notes and brains while bumping version metadata to v1.2.0q. 【F:docs/patch_notes/v1.2.0q.md†L1-L18】【F:docs/atlas/brains.md†L31-L36】【F:app/version.json†L1-L5】
+
+## Verification
+- `pytest tests/ui/test_overlay_ingest_queue_async.py::test_ingest_queue_remains_interactive_during_long_download` 【437e22†L1-L3】
+
+## Docs Consulted
+- `STATE_KEYS_REFERENCE` to confirm expectations around new `st.session_state` mutations. 【F:docs/atlas/STATE_KEYS_REFERENCE.md†L1-L15】
