Move differential controls into tab workspace

--- a/docs/ai_log/2025-10-11.md
+++ b/docs/ai_log/2025-10-11.md
@@ -30,3 +30,18 @@
 
 ## Docs Consulted
 - `STATE_KEYS_REFERENCE` to confirm expectations around new `st.session_state` mutations. 【F:docs/atlas/STATE_KEYS_REFERENCE.md†L1-L15】
+
+## Tasking — v1.2.0r
+- Consolidate differential and similarity controls into the workspace tab and refresh collateral per the v1.2+ contract.
+
+## Actions & Decisions
+- Rebuilt the differential tab to own normalization, differential mode, and explanatory copy so comparisons stay contextually grouped with their compute form. 【F:app/ui/main.py†L3088-L3131】【F:app/ui/main.py†L3285-L3288】
+- Embedded the similarity metric, weighting, and normalization widgets inside a tab expander and pruned the sidebar group to keep session settings lean. 【F:app/ui/main.py†L3132-L3192】【F:app/ui/main.py†L1492-L1509】
+- Captured AppTest regressions confirming the controls moved from the sidebar into the tab and remain available for similarity runs. 【F:tests/ui/test_sidebar_display_controls.py†L1-L33】【F:tests/ui/test_differential_form.py†L1-L109】
+- Logged the change set across version metadata, patch notes, and brains for continuity. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.0r.md†L1-L18】【F:docs/atlas/brains.md†L30-L33】
+
+## Verification
+- `pytest tests/ui/test_sidebar_display_controls.py tests/ui/test_differential_form.py` 【260840†L1-L5】
+
+## Docs Consulted
+- None (local RAG search for "differential controls" not required; existing UI contract already covered the constraints).
