Fix example browser provider filter state

--- a/docs/ai_log/2025-10-11.md
+++ b/docs/ai_log/2025-10-11.md
@@ -45,3 +45,19 @@
 
 ## Docs Consulted
 - None (local RAG search for "differential controls" not required; existing UI contract already covered the constraints).
+
+## Tasking — v1.2.0s
+- Eliminate the Streamlit rerun warning on the example browser provider filter while keeping user selections intact.
+- Refresh continuity collateral per the v1.2+ blueprint.
+
+## Actions & Decisions
+- Seeded the provider filter session key with `setdefault` and mutated the cached list in place so normalised selections persist without triggering Streamlit's reassignment warning. 【F:app/ui/example_browser.py†L189-L207】
+- Exercised the existing AppTest across reruns with narrowed and stale providers to ensure the warning stays absent and selections persist. 【F:tests/ui/test_example_browser.py†L63-L97】
+- Bumped version metadata and recorded the change in brains and patch notes for v1.2.0s. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L24-L29】【F:docs/patch_notes/v1.2.0s.md†L1-L17】
+
+## Verification
+- `pytest tests/ui/test_example_browser.py` 【005833†L1-L3】
+
+## Docs Consulted
+- Confirmed provider naming expectations against the MAST API reference while reviewing filter normalisation. 【F:docs/mirrored/mast_api.meta.json†L1-L6】
+- Revisited the session state reference to ensure the mutation pattern adheres to existing guidelines. 【F:docs/atlas/STATE_KEYS_REFERENCE.md†L1-L15】
