Harden target library overlay gating

--- a/docs/ai_log/2025-10-01.md
+++ b/docs/ai_log/2025-10-01.md
@@ -34,3 +34,19 @@
 
 ## Outstanding Follow-ups
 - Wire the UI contract JSON into the verification script so automated checks enforce the documented sidebar sections.
+
+## Tasking
+- Harden `_product_overlay_support` so manifest metadata gates overlays for 1-D spectra/time-series only, and explain why JWST CALINTS cubes stay disabled.
+- Add regression coverage proving CALINTS cubes and manifest entries without time axes remain blocked.
+- Roll the v1.2.0t collateral (version, patch notes, brains) for the gating hotfix.
+
+## Actions & Decisions
+- Reviewed the ESA JWST archive data product documentation to confirm CALINTS products represent multi-dimensional integration cubes before tightening the gate. 【F:docs/mirrored/astroquery/esa/jwst/jwst.meta.json†L1-L6】
+- Parsed manifest extension axis keywords/dimensionality in `_product_overlay_support`, blocking CALINTS cubes and flagging missing axes with clear disabled-button messaging. 【F:app/ui/targets.py†L19-L219】
+- Extended the overlay support tests to cover axis-hint parsing, JWST CALINTS cubes, and missing time axes. 【F:tests/ui/test_targets_overlay_support.py†L1-L98】
+
+## Verification
+- `pytest tests/ui/test_targets_overlay_support.py` 【e0b007†L1-L5】
+
+## Outstanding Follow-ups
+- Backfill axis metadata for manifests that omit `extensions` so future gating can warn when axis hints are unavailable instead of assuming support.
