Decode FITS byte-string axis units

--- a/docs/ai_log/2025-10-11.md
+++ b/docs/ai_log/2025-10-11.md
@@ -30,3 +30,18 @@
 
 ## Docs Consulted
 - `STATE_KEYS_REFERENCE` to confirm expectations around new `st.session_state` mutations. 【F:docs/atlas/STATE_KEYS_REFERENCE.md†L1-L15】
+
+## Tasking — v1.2.0r
+- Harden FITS ingestion so byte-string axis unit hints decode before wavelength/time classification.
+- Extend regression coverage and roll the v1.2 continuity collateral.
+
+## Actions & Decisions — v1.2.0r
+- Added `_decode_header_text` and routed `_parse_time_unit_hint`, `_normalise_wavelength_unit`, and `_unit_is_wavelength` through it so decoded header bytes are case-folded before alias resolution. 【F:app/server/ingest_fits.py†L233-L305】【F:app/server/ingest_fits.py†L338-L353】【F:app/server/ingest_fits.py†L751-L815】
+- Captured regression fixtures that inject byte-string `Angstroms` and `BJD - 2457000, days` table headers, asserting ingestion preserves the correct `axis_kind`. 【F:tests/server/test_ingest_fits.py†L86-L135】【F:tests/server/test_ingest_fits.py†L396-L426】
+- Published the continuity updates (version bump, patch notes, brains) documenting the hotfix. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.0r.md†L1-L18】【F:docs/atlas/brains.md†L24-L29】
+
+## Verification — v1.2.0r
+- `pytest tests/server/test_ingest_fits.py` 【dacbb4†L1-L28】
+
+## Docs Consulted — v1.2.0r
+- Astropy units reference for header byte handling expectations. 【F:docs/mirrored/astropy/units.meta.json†L1-L6】
