Refine target catalog summary layout

--- a/docs/ai_log/2025-10-01.md
+++ b/docs/ai_log/2025-10-01.md
@@ -50,3 +50,19 @@
 
 ## Outstanding Follow-ups
 - Backfill axis metadata for manifests that omit `extensions` so future gating can warn when axis hints are unavailable instead of assuming support.
+
+## Tasking
+- Restructure the target catalog so search, selection, and manifest context stay visible above the registry grid.
+- Wrap the catalog dataframe in an optional affordance and verify overlay controls remain aligned with curated product groups.
+- Refresh the v1.2 collateral (brains, patch notes, version log) for the catalog layout hotfix.
+
+## Actions & Decisions
+- Reworked `render_targets_panel` to collect the manifest header, summary, metrics, and curated product listings inside a shared container, preserving overlay alignment while moving the registry dataframe into a secondary expander. 【F:app/ui/targets.py†L260-L352】
+- Added a UI regression that asserts the "Browse catalog entries" expander exists and the dataframe remains available, protecting the new ordering. 【F:tests/ui/test_targets_panel_layout.py†L53-L74】
+- Bumped the app version and recorded the layout rationale across the brains log and patch notes to keep continuity artifacts in sync. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L44-L47】【F:docs/patch_notes/v1.2.0u.md†L1-L16】
+
+## Verification
+- `pytest tests/ui/test_targets_panel_layout.py` 【f68a52†L1-L8】
+
+## Outstanding Follow-ups
+- Evaluate surfacing a compact "view in registry" link near the manifest summary so users can jump into the dataframe without expanding the table.
