Remove example browser and streamline examples sidebar

--- a/docs/ai_log/2025-10-01.md
+++ b/docs/ai_log/2025-10-01.md
@@ -1,5 +1,21 @@
 # AI Log — 2025-10-01
 
+## Tasking — v1.2.0v
+- Remove the example browser entry point and keep the Examples sidebar focused on the quick-add selector.
+- Clean up dormant session keys, update documentation/tests, and roll continuity collateral per the v1.2+ protocol.
+
+## Actions & Decisions
+- Removed the browser launcher plus favourites/recents expanders so the quick-add form is the only curated entry point, and trimmed the corresponding session-state defaults. 【F:app/ui/main.py†L1230-L1245】【F:app/ui/main.py†L468-L483】
+- Updated the sidebar regression and library usage review to reflect the leaner Examples experience, and recorded the change in brains/patch notes. 【F:tests/ui/test_sidebar_examples.py†L1-L37】【F:docs/library_usage_review.md†L19-L47】【F:docs/atlas/brains.md†L1-L7】【F:docs/patch_notes/v1.2.0v.md†L1-L17】
+
+## Verification
+- `pytest tests/ui/test_sidebar_examples.py` 【520d93†L1-L4】
+
+## Docs Consulted
+- Reviewed session-state expectations before dropping browser keys. 【F:docs/atlas/STATE_KEYS_REFERENCE.md†L1-L15】
+- Rechecked provider naming context in the MAST API reference to ensure quick-add labelling stays accurate. 【F:docs/mirrored/mast_api.meta.json†L1-L7】
+
+
 ## Tasking
 - Restrict the target library overlay action to MAST products that provide 1-D spectra, SEDs, or time-series and give users feedback on unsupported entries.
 - Add regression coverage proving image/cube manifest rows are annotated instead of queued for overlay.
