Align v1.2.0v patch log metadata

--- a/docs/patch_notes/v1.2.0v.md
+++ b/docs/patch_notes/v1.2.0v.md
@@ -9,9 +9,13 @@
    - Dropped the dormant browser session keys now that the sheet is gone to avoid future Streamlit warnings. 【F:app/ui/main.py†L468-L483】
 2. **Regression coverage & docs**
    - Updated the sidebar AppTest to assert only the quick-add form remains, and refreshed the library usage review to describe the leaner Examples section. 【F:tests/ui/test_sidebar_examples.py†L1-L37】【F:docs/library_usage_review.md†L19-L47】
+3. **Patch log + UI metadata alignment**
+   - Added the v1.2.0v patch log entry so the release summary stays in lockstep with `app/version.json`. 【F:PATCHLOG.txt†L24-L26】
+   - Updated the Docs tab and header regression to assert the quick-add summary renders from patch metadata. 【F:tests/ui/test_docs_tab.py†L16-L78】
 
 ## Verification
 - `pytest tests/ui/test_sidebar_examples.py` 【520d93†L1-L4】
+- `pytest tests/ui/test_docs_tab.py` 【245a80†L1-L5】
 
 ## Continuity
-- Version bumped to v1.2.0v with brains and AI log updates recorded. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L7】【F:docs/ai_log/2025-10-01.md†L1-L20】
+- Version bumped to v1.2.0v with brains, patch log, and AI log updates recorded. 【F:app/version.json†L1-L5】【F:PATCHLOG.txt†L24-L26】【F:docs/atlas/brains.md†L1-L18】【F:docs/ai_log/2025-10-13.md†L1-L22】
