Guard overlay ingest queue thread-safety

--- a/docs/ai_log/2025-10-13.md
+++ b/docs/ai_log/2025-10-13.md
@@ -15,3 +15,19 @@
 
 ## Docs Consulted
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L120】
+
+## Tasking — v1.2.0x
+- Hotfix the overlay ingest queue so background workers avoid touching Streamlit state and queued payloads complete without ScriptRunContext warnings.
+- Refresh the continuity artefacts (brains, patch notes, version manifest, AI log) for the new hotfix entry.
+
+## Actions & Decisions
+- Reworked `_ingest_overlay_job` to return `OverlayIngestResult` payloads and moved `_add_overlay_payload` execution into `_refresh_ingest_jobs`, keeping Streamlit state mutations on the main thread. 【F:app/ui/main.py†L621-L678】【F:app/ui/main.py†L680-L713】
+- Extended the ingest queue AppTest to assert overlays complete without ScriptRunContext warnings while continuing to verify async progress messaging. 【F:tests/ui/test_overlay_ingest_queue_async.py†L9-L128】
+- Logged the hotfix across the v1.2.0x patch notes, version manifest, and brains overview for continuity. 【F:docs/patch_notes/v1.2.0x.md†L1-L17】【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L7】
+- Attempted to query the docs index, but `faiss` remains unavailable in this environment; no new mirrored docs consulted. 【40a747†L1-L5】
+
+## Verification
+- `pytest tests/ui/test_overlay_ingest_queue_async.py` 【5b7b2a†L1-L3】
+
+## Docs Consulted
+- UI Contract overview to confirm overlay sidebar controls remain in place. 【F:docs/ui_contract.json†L1-L28】
