Align v1.2.0x patch metadata

--- a/docs/patch_notes/v1.2.0x.md
+++ b/docs/patch_notes/v1.2.0x.md
@@ -14,4 +14,5 @@
 - `pytest tests/ui/test_overlay_ingest_queue_async.py` 【5b7b2a†L1-L3】
 
 ## Continuity
-- Version bumped to v1.2.0x with brains and AI log updates recorded. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L7】【F:docs/ai_log/2025-10-13.md†L19-L33】
+- Added the v1.2.0x entry to `PATCHLOG.txt` so `_resolve_patch_metadata()` surfaces the main-thread ingest summary across the app header and Docs tab. 【F:PATCHLOG.txt†L27-L27】【F:tests/ui/test_docs_tab.py†L16-L102】【F:app/_version.py†L32-L67】
+- Version bumped to v1.2.0x with brains and AI log updates recorded. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L8】【F:docs/ai_log/2025-10-14.md†L1-L16】
