--- a/docs/ai_log/2025-10-17.md
+++ b/docs/ai_log/2025-10-17.md
@@ -1,12 +1,12 @@
 # AI Log — 2025-10-17
 
-## Tasking — v1.2.0aa
+## Tasking — v1.2.1
 - Relocate overlay trace helpers from ingest results onto the trace model, update UI regressions, and roll release collateral per the v1.2 protocol.
 
 ## Actions & Decisions
 - Moved dataframe/sampling/vectorisation utilities and point counting onto `OverlayTrace`, leaving `OverlayIngestResult` as a status + payload container. 【F:app/ui/main.py†L56-L215】
 - Updated overlay metadata and mixed-axis regressions to use the embedded helpers and added a direct `_build_overlay_figure` smoke test for raw `OverlayTrace` instances. 【F:tests/ui/test_metadata_summary.py†L1-L240】【F:tests/ui/test_overlay_mixed_axes.py†L1-L155】
-- Recorded the helper relocation in the brains notebook and published the v1.2.0aa patch notes alongside the version bump. 【F:docs/atlas/brains.md†L1-L12】【F:docs/patch_notes/v1.2.0aa.md†L1-L21】【F:app/version.json†L1-L5】
+- Recorded the helper relocation in the brains notebook and published the v1.2.1 patch notes alongside the version bump. 【F:docs/atlas/brains.md†L1-L12】【F:docs/patch_notes/v1.2.0aa.md†L1-L21】【F:app/version.json†L1-L5】
 
 ## Verification
 - `pytest tests/ui/test_overlay_mixed_axes.py tests/ui/test_metadata_summary.py` 【f6f54f†L1-L13】
