--- a/docs/patch_notes/v1.2.0z.md
+++ b/docs/patch_notes/v1.2.0z.md
@@ -18,3 +18,4 @@
 
 ## Continuity
 - Version bumped to v1.2.0z with brains and AI log entries recorded per the release protocol. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L8】【F:docs/ai_log/2025-10-16.md†L1-L21】
+- versions past vx.x.xz will roll over to the next vx.x.x+1(a... b... c... d.. and so on)
