--- a/docs/PATCH_NOTES/v1.2.1.md
+++ b/docs/PATCH_NOTES/v1.2.1.md
@@ -1,19 +1,19 @@
 # Patch Notes — v1.2.1
 
 ## Summary
-- Rehomed overlay trace sampling/vectorisation helpers onto the `OverlayTrace` model so downstream UI components work with the canonical trace type. 【F:app/ui/main.py†L43-L166】
-- Hardened overlay regressions with a direct `_build_overlay_figure` instantiation test to guard against missing trace helpers. 【F:tests/ui/test_overlay_mixed_axes.py†L9-L56】
+- Relocated overlay trace helpers onto `OverlayTrace`, added a direct `_build_overlay_figure` regression, and refreshed release collateral for the v1.2.1 cut. 【F:app/ui/main.py†L56-L209】【F:tests/ui/test_overlay_mixed_axes.py†L1-L35】【F:PATCHLOG.txt†L27-L31】
 
 ## Details
-1. **Trace helper relocation**
-   - Moved dataframe conversion, sampling, vectorisation, and point counting logic from `OverlayIngestResult` to `OverlayTrace`, keeping ingest results as status carriers. 【F:app/ui/main.py†L43-L166】【F:app/ui/main.py†L170-L174】
-   - Updated metadata summary fixtures to rely on the baked-in helpers while covering downsample payloads. 【F:tests/ui/test_metadata_summary.py†L1-L229】
-2. **UI regression coverage**
-   - Added a regression that builds an `OverlayTrace` and runs `_build_overlay_figure` to ensure helper methods remain accessible on the trace type. 【F:tests/ui/test_overlay_mixed_axes.py†L22-L56】
-   - Simplified overlay test fixtures now that traces supply their own dataframe/vector helpers. 【F:tests/ui/test_overlay_mixed_axes.py†L9-L21】【F:tests/ui/test_metadata_summary.py†L1-L229】
+1. **OverlayTrace owns helper utilities**
+   - Moved dataframe conversion, sampling, vectorisation, and point-count helpers from ingest results to `OverlayTrace` so downstream UI components operate on the canonical trace model. 【F:app/ui/main.py†L56-L209】
+   - Ensured helper-backed vector generation powers similarity tooling by relying on `OverlayTrace.to_vectors`. 【F:app/ui/main.py†L166-L196】
+2. **Regression coverage**
+   - Added a direct `_build_overlay_figure` regression to confirm overlay traces expose helper methods required for figure construction. 【F:tests/ui/test_overlay_mixed_axes.py†L1-L35】
+   - Exercised mixed-axis and offset scenarios to verify helper-backed traces respect viewport segregation and time-offset provenance. 【F:tests/ui/test_overlay_mixed_axes.py†L68-L155】
 
 ## Verification
-- `pytest tests/ui/test_overlay_mixed_axes.py tests/ui/test_metadata_summary.py` 【f6f54f†L1-L13】
+- `pytest tests/ui/test_overlay_mixed_axes.py -q` 【dff6dc†L1-L2】
 
 ## Continuity
-- Version bumped to v1.2.1 with brains and AI log updates recorded per the v1.2 protocol. 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L1-L12】【F:docs/ai_log/2025-10-17.md†L1-L15】
+- Added the v1.2.1 entry to `PATCHLOG.txt` so `_resolve_patch_metadata()` surfaces the updated summary across the UI header and Docs tab. 【F:PATCHLOG.txt†L27-L31】【F:app/ui/main.py†L3385-L3392】【F:tests/ui/test_docs_tab.py†L16-L105】
+- Recorded the change in `docs/atlas/brains.md` and `docs/ai_log/2025-10-19.md` per the v1.2 protocol. 【F:docs/atlas/brains.md†L1-L4】【F:docs/ai_log/2025-10-19.md†L1-L15】
