Normalize time axes and reject time-series overlays

--- a/docs/ai_log/2025-10-20.md
+++ b/docs/ai_log/2025-10-20.md
@@ -14,3 +14,17 @@
 
 ## Docs Consulted
 - None — local search endpoint returned no results for the requested query.
+
+## Tasking — Overlay time-series policy update
+- Normalise FITS time offsets before emitting time samples and block time-series payloads from overlay ingestion while updating documentation.
+
+## Actions & Decisions
+- Subtracted detected FITS time offsets inside `_extract_table_data`, recorded an `offset_subtracted` flag, and prevented duplicate subtraction when building payload metadata. 【F:app/server/ingest_fits.py†L519-L550】【F:app/server/ingest_fits.py†L1475-L1527】
+- Rejected time-series overlays in both `_add_overlay` and local ingest, filtered time traces from overlay grouping/rendering, and surfaced the policy through user-facing error messages. 【F:app/ui/main.py†L970-L1050】【F:app/ui/main.py†L373-L382】【F:app/ui/main.py†L1885-L1934】【F:app/utils/local_ingest.py†L461-L482】
+- Added regression coverage with TESS-like light curves to assert FITS ingest normalises offsets, local ingest emits the policy error, and overlay rendering ignores time traces. 【F:tests/server/test_ingest_fits.py†L491-L513】【F:tests/server/test_local_ingest.py†L517-L691】【F:tests/ui/test_overlay_time_policy.py†L15-L65】
+
+## Verification
+- `pytest tests/server/test_ingest_fits.py tests/server/test_local_ingest.py tests/ui/test_overlay_time_policy.py -q` 【3af223†L1-L37】
+
+## Docs Consulted
+- None — local doc search returned an empty payload for overlay policy queries. 【dbafaa†L1-L1】
