Curate CALSPEC library with astroquery

--- a/docs/ai_log/2025-10-02.md
+++ b/docs/ai_log/2025-10-02.md
@@ -25,6 +25,24 @@
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint (internal).
 - https://docs.astropy.org/en/latest/io/votable/
 
+## Tasking — v1.2.1e
+- Replace the CALSPEC sample shim with an astroquery-backed downloader that records real provenance for curated spectra.
+- Prune the sample registry so the library UI references only vetted CALSPEC targets.
+- Refresh regression coverage and continuity collateral (patch note, brains entry, AI log, version metadata).
+
+## Actions & Decisions
+- Swapped the CALSPEC downloader to `astroquery.mast.Observations.download_file`, tagging provenance with the download agent and cache location. 【F:app/server/fetchers/mast.py†L1-L210】
+- Introduced `materialise_curated_mast_library` and updated the helper script so curation scripts emit a manifest per fetched CALSPEC target. 【F:app/server/fetch_archives.py†L1-L74】【F:scripts/fetch_samples.py†L1-L15】
+- Rebuilt `data_registry`/`catalog.csv` around the nine curated CALSPEC standards to align UI metrics with the vetted library. 【F:data_registry/catalog.csv†L1-L10】【F:data_registry/Feige_110/manifest.json†L1-L44】
+- Added server-side regression coverage that exercises the astroquery-backed fetcher and curated materialiser end-to-end. 【F:tests/server/test_fetch_mast.py†L1-L120】【F:tests/server/test_fetch_archives.py†L1-L50】
+- Reindexed release collateral for v1.2.1e (version metadata, brains entry, patch notes). 【F:app/version.json†L1-L5】【F:docs/atlas/brains.md†L111-L114】【F:docs/patch_notes/v1.2.1e.md†L1-L40】
+
+## Verification
+- `pytest tests/server/test_fetch_mast.py tests/server/test_fetch_archives.py -q` 【bfbe40†L1-L9】
+
+## Docs Consulted
+- https://astroquery.readthedocs.io/en/latest/mast/mast_obsquery.html 【F:docs/mirrored/astroquery/mast/mast_obsquery.meta.json†L1-L7】
+
 ## Tasking — v1.2.0f
 - Resolve the Streamlit rerun warning emitted by the example browser provider selector.
 - Preserve cached provider filters and update regression coverage accordingly.
