Bootstrap Streamlit entrypoint imports

--- a/docs/ai_log/2025-10-21.md
+++ b/docs/ai_log/2025-10-21.md
@@ -1,5 +1,18 @@
 # AI Log — 2025-10-21
 
+## Tasking — Streamlit import bootstrap
+- Ensure Streamlit Cloud can execute `app/ui/main.py` directly without `ModuleNotFoundError` by bootstrapping package imports and updating release collateral.
+
+## Actions & Decisions
+- Prepend the repository root to `sys.path` when `__package__` is unset and switch UI imports to relative form so the module works when imported or executed as a file. 【F:app/ui/main.py†L25-L80】
+- Rolled version metadata, patch notes, and brains documentation to capture the deployment-facing fix. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1f.md†L1-L20】【F:docs/atlas/brains.md†L1-L5】
+
+## Verification
+- `pytest tests/ui/test_docs_tab.py -q` 【7f26ef†L1-L2】
+
+## Docs Consulted
+- None.
+
 ## Tasking — Overlay ingest rerun stability
 - Ensure overlay ingest futures created before a Streamlit rerun still resolve successfully and update release collateral.
 
