Document SpecViz adaptation plan

--- a/docs/ai_log/2025-10-05.md
+++ b/docs/ai_log/2025-10-05.md
@@ -23,3 +23,25 @@
 ## Docs Consulted
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L35】
 - NIST Atomic Spectra Database help. 【F:docs/mirrored/nist_asd_help/help.meta.json†L1-L6】
+
+## Tasking — v1.2.1g
+- Compile a SpecViz/Jdaviz capability survey and translate it into an adoption blueprint for Spectra App.
+- Update v1.2+ continuity collateral (brains, patch notes, patch log, version) to document the research handoff.
+
+## Actions & Decisions
+- Reviewed Jdaviz quickstart, Specviz import/display/plugin/export guides, Cubeviz/Specviz2D docs, and developer API references to catalogue ingestion pathways, viewer ergonomics, plugin coverage, export flows, and provenance expectations. 【F:docs/research/specviz_adaptation.md†L5-L68】
+- Captured the findings in a gap matrix, phased roadmap, and research backlog to anchor Spectra App planning around SpecViz parity. 【F:docs/research/specviz_adaptation.md†L70-L144】
+- Logged the blueprint in `docs/atlas/brains.md`, published patch notes `v1.2.1g`, bumped `app/version.json`, and extended `PATCHLOG.txt` for traceability. 【F:docs/atlas/brains.md†L205-L210】【F:docs/patch_notes/v1.2.1g.md†L1-L20】【F:app/version.json†L1-L5】【F:PATCHLOG.txt†L34-L38】
+- Cross-referenced JWST archive guidance noting Jdaviz availability within the MAST portal to align our roadmap with community expectations. 【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.md†L60-L86】【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.meta.json†L1-L6】
+
+## Verification
+- Not applicable (documentation-only research update).
+
+## Outstanding Follow-ups
+- Size the engineering effort for adopting `specutils` data models within our ingest pipeline.
+- Prototype a pluggable panel/tray framework informed by the roadmap.
+- Evaluate Glue integration depth and session persistence strategies noted in the research backlog.
+
+## Docs Consulted
+- Jdaviz quickstart, Specviz, Cubeviz, Specviz2D, Mosviz, export, and API documentation. 【F:docs/research/specviz_adaptation.md†L5-L144】
+- JWST MAST portal guidance referencing Jdaviz tooling. 【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.md†L60-L86】【F:docs/mirrored/jwst_docs/accessing-jwst-data/mast-web-access.meta.json†L1-L6】
