Document Specviz adoption plan

--- a/docs/ai_log/2025-10-05.md
+++ b/docs/ai_log/2025-10-05.md
@@ -23,3 +23,24 @@
 ## Docs Consulted
 - Spectra App v1.2+ – Handoff Protocol & Task Blueprint. 【F:docs/ai_handoff/Spectra App v1.2+ – Handoff Protocol & Task Blueprint.txt†L1-L35】
 - NIST Atomic Spectra Database help. 【F:docs/mirrored/nist_asd_help/help.meta.json†L1-L6】
+
+## Tasking — v1.2.1g
+- Capture an adoption blueprint translating JDaviz/Specviz capabilities into Spectra App planning artefacts.
+- Update continuity artefacts (brains, patch notes, version, AI log) in line with the v1.2+ workflow contract.
+
+## Actions & Decisions
+- Reviewed JDaviz Specviz docs and README to inventory ingestion, viewer, plugin, export, and helper patterns before drafting guidance. 【F:docs/atlas/Specviz_Adoption_Blueprint.md†L3-L82】
+- Authored the Specviz Adoption Blueprint covering feature summaries, gap analysis, phased strategy, and research follow-ups, then logged the decision in atlas/brains. 【F:docs/atlas/Specviz_Adoption_Blueprint.md†L1-L82】【F:docs/atlas/brains.md†L1-L7】
+- Bumped release metadata and recorded patch notes so downstream tooling recognises the documentation milestone. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1g.md†L1-L16】
+
+## Verification
+- Not run (documentation-only change).
+
+## Outstanding Follow-ups
+- Prototype a helper API skeleton mirroring Specviz method names to validate feasibility before deeper UI work.
+- Evaluate embedding strategies for Glue viewers inside Streamlit, including performance profiling of redshift slider patterns.
+
+## Docs Consulted
+- JDaviz Specviz user guide (external): https://jdaviz.readthedocs.io/en/latest/specviz/index.html
+- JDaviz README (external): https://github.com/spacetelescope/jdaviz/blob/main/README.rst
+
