--- a/docs/ai_log/2025-10-27.md
+++ b/docs/ai_log/2025-10-27.md
@@ -13,3 +13,17 @@
 
 ## Docs Consulted
 - None (code inspection only).
+
+## Tasking — Enable JCAMP-DX imports
+- Allow NIST infrared spectra exported as JCAMP-DX files to import as overlays without plotting the bundled uncertainty traces.
+
+## Actions & Decisions
+- Built a dedicated `parse_jcamp` helper that tokenises JCAMP XYDATA sections, converts reported wavelength units to nanometres, skips uncertainty-labelled sections, and preserves provenance metadata for caching/downsampling. 【F:app/server/ingest_jcamp.py†L20-L383】
+- Extended local upload detection to recognise JCAMP extensions or headers and routed those payloads through the new parser while leaving existing FITS/ASCII flows unchanged. 【F:app/utils/local_ingest.py†L11-L75】【F:app/utils/local_ingest.py†L305-L404】
+- Added a regression covering a dual-section JCAMP sample to confirm the spectrum imports, uncertainty data is ignored, and header-only detection still selects the JCAMP path. 【F:tests/server/test_local_ingest.py†L360-L403】
+
+## Verification
+- `pytest tests/server/test_local_ingest.py::test_ingest_local_jcamp_xydata_skips_uncertainty -q` 【9198e9†L1-L2】
+
+## Docs Consulted
+- None (sample JCAMP downloaded from NIST WebBook for inspection).
