Add manual WebBook fallbacks for Quant IR

--- a/docs/ai_log/2025-10-27.md
+++ b/docs/ai_log/2025-10-27.md
@@ -1,5 +1,19 @@
 # AI Log — 2025-10-27
 
+## Tasking — Integrate NIST Quantitative IR catalog
+- Scrape the Quant IR species table, resolve the 0.125 cm⁻¹ JCAMP entries, and expose the spectra through the app with provenance and regression coverage.
+
+## Actions & Decisions
+- Implemented a dedicated `nist_quant_ir` fetcher that caches the catalog, extracts JCAMP links, and annotates overlays with relative uncertainty, apodization, and source URLs. 【F:app/server/fetchers/nist_quant_ir.py†L1-L220】
+- Added a preset molecule selector to the line catalog panel with cached availability hints and fallback messaging for molecules missing from the Quant IR list. 【F:app/ui/main.py†L53-L122】【F:app/ui/main.py†L1372-L1455】
+- Documented the workflow in the quick start guide and added parser regressions to lock table parsing, JCAMP extraction, and apodization preference logic. 【F:docs/app/user_guide.md†L11-L18】【F:tests/server/test_nist_quant_ir.py†L1-L64】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【857d27†L1-L3】
+
+## Docs Consulted
+- None (live NIST Quant IR page inspection).
+
 ## Tasking — Restore clean v1.2.1 baseline
 - Remove merge conflict artifacts introduced during an aborted plugin refactor and realign release collateral.
 
@@ -13,6 +27,20 @@
 
 ## Docs Consulted
 - None (code inspection only).
+
+## Tasking — Provide Quant IR fallbacks for water, methane, and CO2
+- Ensure the preset Quant IR selector can fetch 0.125&nbsp;cm⁻¹ overlays for H₂O, methane, and CO₂ even though the catalog omits them.
+
+## Actions & Decisions
+- Registered manual WebBook mappings for H2O, methane, and CO2, merged them into the cached catalog, and exposed provenance flags so the selector resolves the new tokens. 【F:app/server/fetchers/nist_quant_ir.py†L151-L187】【F:app/server/fetchers/nist_quant_ir.py†L412-L463】
+- Parsed JCAMP Δx metadata, resampled manual payloads onto the 0.125&nbsp;cm⁻¹ grid, and recorded the source sampling rate in metadata/provenance. 【F:app/server/fetchers/nist_quant_ir.py†L238-L395】
+- Surface manual provenance guidance in the Quant IR sidebar and documented the workflow in the quick-start guide. 【F:app/ui/main.py†L1579-L1599】【F:docs/app/user_guide.md†L15-L23】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【02cca5†L1-L3】
+
+## Docs Consulted
+- `docs/app/user_guide.md` 【F:docs/app/user_guide.md†L15-L23】
 
 ## Tasking — Enable JCAMP-DX imports
 - Allow NIST infrared spectra exported as JCAMP-DX files to import as overlays without plotting the bundled uncertainty traces.
@@ -56,3 +84,30 @@
 
 ## Docs Consulted
 - None (UI code inspection).
+
+## Tasking — Stabilize Quant IR overlay sampling
+- Ensure Quant IR overlays sampled with viewport limits build trace vectors without runtime errors.
+
+## Actions & Decisions
+- Guarded the overlay vectoriser to return cached dataframes only when available and fall back to sampled points otherwise, eliminating the `UnboundLocalError`. 【F:app/ui/main.py†L210-L241】
+- Bumped the app version and recorded release collateral for the bug fix. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1o.md†L1-L8】【F:PATCHLOG.txt†L22-L41】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【0fb255†L1-L2】
+
+## Docs Consulted
+- None (code inspection only).
+
+## Tasking — Restore overlay workspace table visibility controls
+- Prevent the overlay visibility editor from crashing after Quant IR downloads introduce traces lacking a `points` attribute.
+
+## Actions & Decisions
+- Exposed a derived `points` property on overlay traces so the workspace table can display Quant IR overlays without raising `AttributeError`. 【F:app/ui/main.py†L117-L138】【F:app/ui/main.py†L2332-L2344】
+- Guarded image overlays to report zero points when their payload is missing or unparseable, avoiding misleading counts. 【F:app/ui/main.py†L117-L138】
+- Updated release collateral with the v1.2.1p patch notes, version metadata, and patch log entry. 【F:app/version.json†L1-L5】【F:docs/patch_notes/v1.2.1p.md†L1-L11】【F:PATCHLOG.txt†L33-L41】
+
+## Verification
+- `pytest tests/server/test_nist_quant_ir.py -q` 【857d27†L1-L3】
+
+## Docs Consulted
+- None (code inspection only).
